2012-09-26  Ulrich Drepper  <drepper@gmail.com>

	Optimize bulk mode for normal_distribution<double> for SSE3.
	* configure.host: Define cpu_opt_bits_random.
	* configure.ac: Substitute CPU_OPT_BITS_RANDOM.
	* include/Makefile.am (bits_headers): Add ${bits_host_headers}.
	(bits_host_headers): Define.
	* include/bits/random.tcc: Move __details::_Power_of_2 to...
	* include/bits/random.h: ...here.
	* include/std/random: Include <bits/opt_random.h>.
	* config/cpu/i486/opt/bits/opt_random.h: New file.
	* config/cpu/generic/opt/bits/opt_random.h: New file.
	* configure: Regenerated.
	* Makefile.in: Regenerated.
	* aclocal.m4: Regenerated.
	* doc/Makefile.in: Regenerated.
	* include/Makefile.in: Regenerated.
	* libsupc++/Makefile.in: Regenerated.
	* po/Makefile.in: Regenerated.
	* python/Makefile.in: Regenerated.
	* src/Makefile.in: Regenerated.
	* src/c++11/Makefile.in: Regenerated.
	* src/c++98/Makefile.in: Regenerated.
	* testsuite/Makefile.in: Regenerated.

	* config/cpu/generic/opt/ext/opt_random.h: Fix comment.

2012-09-18  Edward Smith-Rowland  <3dw4rd@verizon.net>

	* include/ext/random: Add __gnu_cxx::nakagami_distribution<> class.
	* include/ext/random.tcc: Add out-of-line functions for
	__gnu_cxx::nakagami_distribution<>.
	* testsuite/ext/random/nakagami_distribution/operators/equal.cc:
	New file.
	* testsuite/ext/random/nakagami_distribution/operators/serialize.cc:
	New file.
	* testsuite/ext/random/nakagami_distribution/operators/inequal.cc:
	New file.
	* testsuite/ext/random/nakagami_distribution/cons/parms.cc: New file.
	* testsuite/ext/random/nakagami_distribution/cons/default.cc: New file.
	* testsuite/ext/random/nakagami_distribution/requirements/typedefs.cc:
	New file.
	* testsuite/ext/random/nakagami_distribution/requirements/
	explicit_instantiation/1.cc: New file.

2012-09-18  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/54612
	* include/ext/random.tcc (operator==
	(const __gnu_cxx::simd_fast_mersenne_twister_engine<>&,